[gd_scene load_steps=14 format=3 uid="uid://c2ck0uckicp1i"]

[ext_resource type="Script" path="res://Scripts/LevelLogic.gd" id="1_jxpvm"]
[ext_resource type="Script" path="res://Scenes/Level/BallCatchMiniGame.gd" id="2_2l8wo"]
[ext_resource type="PackedScene" uid="uid://vnmt1evckf0v" path="res://Scenes/lady.tscn" id="2_gye7x"]
[ext_resource type="Script" path="res://Scenes/Level/moveOnLine.gd" id="2_vu428"]
[ext_resource type="Script" path="res://Scenes/speen.gd" id="4_ik1u0"]

[sub_resource type="Curve3D" id="Curve3D_ep83h"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -3, -0.196, -0.07, 0, 0, 0, 0, 0, 0, 3, -0.204, -0.072, 0, 0, 0, 0, 0, 0, -3, -0.196, -0.07),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rr2fu"]
points = PackedVector3Array(-0.548997, -0.116817, -0.458517, -0.400901, 0.293962, 0.574195, -0.476302, 0.293261, 0.571186, -0.401651, 0.772373, -0.112845, 0.0319394, -0.311743, 0.162954, -0.855157, -0.0553491, 0.320653, 0.0713989, 0.457068, -0.152212, -0.5003, 0.516226, -0.507092, 0.0319394, -0.134144, -0.32971, -0.736779, 0.595022, 0.30097, 0.0516692, 0.338628, 0.360136, -0.145535, -0.469457, -0.0141962, -0.125806, 0.752736, 0.103788, -0.663858, -0.176718, 0.399837, -0.700028, -0.306228, -0.0694722, -0.231749, 0.236385, -0.539472, 0.0319394, -0.153905, 0.340453, -0.657952, 0.752736, 0.0841051, -0.559396, 0.062844, -0.546574, -0.570309, 0.48136, 0.513715, -0.702986, 0.180213, 0.552897, 0.0516692, 0.181037, -0.408559, -0.139624, 0.534361, -0.311637, -0.136803, 0.349933, 0.495838, 0.0911286, 0.516226, 0.0447383, -0.559396, 0.792257, 0.143155, -0.457506, 0.0104757, 0.515007, -0.720427, -0.289817, 0.174467, -0.0801883, -0.442311, -0.0888106, -0.638223, -0.153905, -0.388876, -0.855157, 0.102365, 0.36002, -0.778955, 0.40702, 0.458914)

[sub_resource type="ViewportTexture" id="ViewportTexture_3kl8j"]
viewport_path = NodePath("GameContainer/HEadPath/PathFollow3D/lady/Sprite3D/SubViewport")

[sub_resource type="PrismMesh" id="PrismMesh_o0bxb"]

[sub_resource type="ViewportTexture" id="ViewportTexture_uw0lm"]
viewport_path = NodePath("GameContainer/BallDropper/PathFollow3D/Node3D/Sprite3D/SubViewport")

[sub_resource type="Animation" id="Animation_h347q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Instructions:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Instructions:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ekn5k"]
resource_name = "text_anim"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Instructions:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0349066, -0.0349066, 0.0349066, -0.0349066, 0.0349066, -0.0349066, 0.0349066, -0.0349066, 0.0349066, -0.0349066, 0.0349066, -0.0349066, 0.0349066, -0.0349066, 0.0349066, -0.0349066, 0.0349066, -0.0349066, 0.0349066, -0.0349066, 0.0349066]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Instructions:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivwv2"]
_data = {
"RESET": SubResource("Animation_h347q"),
"text_anim": SubResource("Animation_ekn5k")
}

[node name="Level" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
script = ExtResource("1_jxpvm")

[node name="GameContainer" type="Node3D" parent="."]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.25765, 0)
script = ExtResource("2_2l8wo")

[node name="HEadPath" type="Path3D" parent="GameContainer"]
transform = Transform3D(-1.99999, 0.0054284, 0.00129444, 0.00542854, 1.99999, 0.000221202, -0.00129383, 0.000224714, -2, 0, -1.43, -0.166844)
curve = SubResource("Curve3D_ep83h")

[node name="PathFollow3D" type="PathFollow3D" parent="GameContainer/HEadPath"]
transform = Transform3D(0.99994, 0, 0, 0, 0.999969, 0, 0, 0, 0.999909, 1.00018, -0.201334, -0.0713334)
progress = 4.00001
rotation_mode = 0
script = ExtResource("2_vu428")

[node name="lady" parent="GameContainer/HEadPath/PathFollow3D" instance=ExtResource("2_gye7x")]
transform = Transform3D(1.2, 8.86714e-10, -6.98492e-11, -8.86714e-10, 1.2, 2.61934e-11, 6.98492e-11, -2.61934e-11, 1.2, 0, 0, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("4_ik1u0")
angle = Vector3(0, 1, 0)
degrees_per_second = 100.0
randomiser = true

[node name="Area3D" type="Area3D" parent="GameContainer/HEadPath/PathFollow3D/lady"]
transform = Transform3D(1, -4.475e-11, -2.91038e-10, 8.90886e-10, 1, 3.63798e-11, 5.82077e-11, 0, 1, 0.001131, 0.416678, 4.6134e-05)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="GameContainer/HEadPath/PathFollow3D/lady/Area3D"]
transform = Transform3D(-2.09332e-07, 0.00103499, -0.799999, -0.8, -0.000179707, -2.31615e-08, -0.000179707, 0.799999, 0.00103499, -0.001131, -0.416678, -4.6134e-05)
shape = SubResource("ConvexPolygonShape3D_rr2fu")

[node name="Sprite3D" type="Sprite3D" parent="GameContainer/HEadPath/PathFollow3D/lady"]
transform = Transform3D(-3.00989, 0.01628, 5.12926e-07, 0.016339, 2.99901, 0.000220951, 2.06998e-06, 0.000663355, -0.998925, 0.00226206, 0.833357, 9.21488e-05)
billboard = 2
double_sided = false
no_depth_test = true
texture = SubResource("ViewportTexture_3kl8j")

[node name="SubViewport" type="SubViewport" parent="GameContainer/HEadPath/PathFollow3D/lady/Sprite3D"]
transparent_bg = true
size = Vector2i(32, 32)
size_2d_override_stretch = true

[node name="BallsEntered" type="RichTextLabel" parent="GameContainer/HEadPath/PathFollow3D/lady/Sprite3D/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]3"
autowrap_mode = 0

[node name="BallDropper" type="Path3D" parent="GameContainer"]
transform = Transform3D(-1.99999, 0.0054284, 0.00129444, 0.00542854, 1.99999, 0.000221202, -0.00129383, 0.000224714, -2, 0, 5.50223, -0.166844)
curve = SubResource("Curve3D_ep83h")

[node name="PathFollow3D" type="PathFollow3D" parent="GameContainer/BallDropper"]
transform = Transform3D(0.99994, 0, 0, 0, 0.999969, 0, 0, 0, 0.999909, 1.00018, -0.201334, -0.0713334)
progress = 4.00001
rotation_mode = 0
script = ExtResource("2_vu428")
speed = -2.0

[node name="Node3D" type="Node3D" parent="GameContainer/BallDropper/PathFollow3D"]
transform = Transform3D(-0.500029, 0.00135722, -0.000323478, 0.00135714, 0.500014, 5.61805e-05, 0.000323639, 5.53054e-05, -0.500045, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="GameContainer/BallDropper/PathFollow3D/Node3D"]
transform = Transform3D(-1, 8.74228e-08, -1.03987e-11, -8.74228e-08, -1, -1.29984e-12, -1.16415e-10, -1.45519e-11, 0.0893243, 0, 0, 0)
mesh = SubResource("PrismMesh_o0bxb")

[node name="Sprite3D" type="Sprite3D" parent="GameContainer/BallDropper/PathFollow3D/Node3D"]
transform = Transform3D(-2.99996, 0.0162851, 1.8835e-06, 0.0162851, 2.99996, 0.000663566, 1.71861e-06, 0.000663566, -3, -0.0922015, 0.0978386, 9.20296e-05)
billboard = 2
double_sided = false
no_depth_test = true
texture = SubResource("ViewportTexture_uw0lm")

[node name="SubViewport" type="SubViewport" parent="GameContainer/BallDropper/PathFollow3D/Node3D/Sprite3D"]
transparent_bg = true
size = Vector2i(32, 32)
size_2d_override_stretch = true

[node name="BallsLeft" type="RichTextLabel" parent="GameContainer/BallDropper/PathFollow3D/Node3D/Sprite3D/SubViewport"]
offset_right = 40.0
offset_bottom = 40.0
bbcode_enabled = true
text = "[center]3"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000639439, 2.38419e-07, 4.49148)
current = true
fov = 90.0
size = 4.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Instructions" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 12)
size_flags_horizontal = 3
size_flags_vertical = 6
bbcode_enabled = true
text = "[center] Drop 3
"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_ivwv2")
}

[connection signal="body_entered" from="GameContainer/HEadPath/PathFollow3D/lady/Area3D" to="GameContainer" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="GameContainer/HEadPath/PathFollow3D/lady/Area3D" to="GameContainer" method="_on_area_3d_body_exited"]
